# tui-widget-list

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  hx
.github/workflows/: ci.yml  release.yml
examples/: blocks.rs  demo.rs  demo.tape  demo_legacy.rs  long.rs  mixed.rs  mouse.rs  paragraph.rs  paragraph_list.rs  scroll_config.rs  simple.rs  simple.tape  simple_deprecated.rs  simple_legacy.rs  simple_list.rs  var_sizes.rs  variants.rs
examples/common/: item_container.rs  lib.rs
examples/tapes/: demo.tape  simple.tape  variants.tape
examples/variants/: backward.rs  classic.rs  config.rs  fps.rs  horizontal.rs  infinite.rs  padded.rs  scroll_padding.rs  simple.rs
src/: hit_test.rs  lib.rs  list_view.rs  render.rs  scroll_axis.rs  selectable.rs  state.rs  traits.rs  traits_deprecated.rs  utils.rs  view.rs  widget.rs
src/legacy/: mod.rs  traits.rs  traits_deprecated.rs  utils.rs  widget.rs
