[package]
name = "tui-widget-list"
version = "0.14.1"
edition = "2021"
authors = ["preiter <phil.reiter93@gmail.com>"]
description = "Widget List for TUI/Ratatui"
repository = "https://github.com/preiter93/tui-widget-list"
keywords = ["tui", "ratatui", "widget", "list", "widgetlist"]
readme = "README.md"
license = "MIT"

[dependencies]
ratatui-core = { package = "ratatui-core", version = "0.1" }
ratatui-widgets = { version = "0.3.0", default-features = false }

[dev-dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }

[[example]]
name = "simple"

[[example]]
name = "var_sizes"

[[example]]
name = "demo"

[[example]]
name = "variants"
